@@ -979,14 +979,15 @@ int pam_sm_setcred(pam_handle_t *pamh, int flags, int argc, const char **argv)
 				     strerror(errno));
 				ret = PAM_SYSTEM_ERR;
 			}
-			if(fchown(tmpfd, stash->uid, stash->gid) == -1) {
-				CRIT("%s getting setting owner of ticket file",
+			if((fchown(tmpfd, stash->uid, stash->gid) == -1) &&
+			   (getuid() == 0)) {
+				CRIT("%s setting owner of ticket file",
 				     strerror(errno));
 				close(tmpfd);
 				ret = PAM_SYSTEM_ERR;
 			}
 			if(fchmod(tmpfd, S_IRUSR | S_IWUSR) == -1) {
-				CRIT("%s getting setting mode of ticket file",
+				CRIT("%s setting mode of ticket file",
 				     strerror(errno));
 				close(tmpfd);
 				ret = PAM_SYSTEM_ERR;
@@ -1135,16 +1136,17 @@ int pam_sm_setcred(pam_handle_t *pamh, int flags, int argc, const char **argv)
 						     stash->v4_creds.kvno,
 						     &stash->v4_creds.ticket_st,
 						     stash->v4_creds.issue_date);
-				if(chown(stash->v4_path, stash->uid,
-					 stash->gid) == -1) {
-					CRIT("%s getting setting owner of "
-					     "ticket file", strerror(errno));
+				if((chown(stash->v4_path, stash->uid,
+					  stash->gid) == -1) &&
+				   (getuid() == 0)) {
+					CRIT("%s setting owner of ticket file",
+					     strerror(errno));
 				}
 				chmod(stash->v4_path, S_IRUSR | S_IWUSR);
 				if(chmod(stash->v4_path,
 					 S_IRUSR | S_IWUSR) == -1) {
-					CRIT("%s getting setting mode of "
-					     "ticket file", strerror(errno));
+					CRIT("%s setting mode of ticket file",
+					     strerror(errno));
 				}
 			}
 		}
